--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,7 @@
 /* clr for color */
 /* the higher the number the darker the color */
 :root {
-    --clr-primary-300: #F3EED9;
+    --clr-primary-200: #F3EED9;
     --clr-primary-400: #824936;
 
     --clr-neutral-100: #fff;
@@ -27,4 +27,30 @@ body {
 
 body, h1, h2, h3, p {
     margin: 0;
+}
+
+h1, h2, h3 {
+    font-family: var(--ff-accent);
+    font-weight: 900;
+    line-height: 1;
+}
+
+section {
+    padding: 3rem 0;
+}
+
+.bg-light {
+    background-color: var(--clr-primary-200);
+}
+.bg-primary {
+    color: var(--clr-neutral-100);
+    background-color: var(--clr-primary-400);
+}
+.bg-dark {
+    color: var(--clr-neutral-100);
+    background-color: var(--clr-neutral-900);
+}
+
+.bg-primary h2, .bg-dark h2 {
+    color: var(--clr-primary-200);
 }
