--- a/css/main.css
+++ b/css/main.css
@@ -35,13 +35,22 @@ h1, h2, h3 {
     line-height: 1;
 }
 
-section {
+.text-center {
+    text-align: center;
+}
+
+
+header, section {
     padding: 3rem 0;
 }
 
 .container {
     margin-inline: auto; /*only left and right margins, margin-block is top and bottom*/
     width: min(90%, 70.5rem); /* min width is set to 90% and max width to 70.5rem*/
+}
+
+.container--narrow {
+    max-width: 35rem;
 }
 
 .bg-light {
